--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,27 @@ body {
   border-radius: 35px;
   /* display: none; */
   transition: all 0.3s ease;
+  z-index:9999;
+
 }
+
+@media (max-width: 800px) {
+  #return-to-top {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    /* display: block; */
+    text-decoration: none;
+    border-radius: 35px;
+    /* display: none; */
+    transition: all 0.3s ease;
+    z-index:9999;
+  }
+
+}
+
 #return-to-top i {
   margin: 0;
   position: relative;
