--- a/src/app/news/components/date-range-picker/date-range-picker.component.css
+++ b/src/app/news/components/date-range-picker/date-range-picker.component.css
@@ -1,10 +1,13 @@
 
+.date-range label {
+  padding: 8px;
+  margin-bottom: 0.5rem;
+}
 
 .date-input {
   border: 2px solid #ee495f;
   border-radius: 5px;
-  margin-right: 30px;
-  width: 140px;
+  width: 135px;
   text-align: center;
 }
 
