--- a/src/app/news/components/display-news/display-news.component.css
+++ b/src/app/news/components/display-news/display-news.component.css
@@ -1,3 +1,7 @@
+.container {
+  margin: 0 auto;
+  padding-bottom: 8px; }
+
 .right {
   text-align: right; }
 
@@ -9,79 +13,86 @@ a:active, a:hover {
   text-decoration: none; }
 
 .news-container {
-  margin: 8px 30px;
+  margin: 0 auto;
   padding: 8px;
   box-shadow: 0px 1px 2px #ee495f;
-  border-radius: 5px; }
-
-.news-title {
-  font-size: 16px; }
-
-.news-source {
-  display: inline-block;
-  font-size: 12px;
-  color: #7a5656; }
-
-.news-description {
-  font-size: 12px; }
-
-.news-info {
-  display: block;
-  font-size: 10px;
-  color: #7a5656; }
-
-.news-author, .news-date {
-  display: inline-block;
-  margin: 0 0 0 5px; }
-
-i {
-  color: #ffd600; }
-
-.star:hover {
-  opacity: 0.5;
-  cursor: pointer; }
-
-.msg-body {
-  font-size: small;
-  font-weight: bold; }
-  .msg-body a {
-    color: #ee495f; }
-  .msg-body p {
-    margin: 0 0 0 32px; }
-
-.close-x:before {
-  content: 'x'; }
-
-.close-x {
-  text-decoration: none;
-  top: 5px;
-  margin: 0 8px;
-  cursor: pointer; }
-
-.display-none {
-  display: none; }
-
-.thumbnail-container {
+  border-radius: 5px;
+  position: relative;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  min-height: 66px;
   width: 100%;
-  height: 50px;
-  text-align: right; }
-  .thumbnail-container img {
+  min-width: 300px; }
+  .news-container .news-title {
+    font-size: 16px; }
+    .news-container .news-title .news-source {
+      display: inline-block;
+      font-size: 12px;
+      color: #7a5656; }
+    .news-container .news-title .news-info {
+      display: block;
+      font-size: 10px;
+      color: #7a5656; }
+    .news-container .news-title .news-author, .news-container .news-title .news-date {
+      display: inline-block;
+      margin: 0 0 0 5px; }
+    .news-container .news-title i {
+      color: #ffd600; }
+    .news-container .news-title .star:hover {
+      opacity: 0.5;
+      cursor: pointer; }
+    .news-container .news-title .news-description {
+      font-size: 12px; }
+  .news-container .thumbnail-container {
+    width: 200px;
+    right: 16px;
+    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 8px; }
+    .news-container .thumbnail-container img {
+      cursor: pointer;
+      height: 50px; }
+    .news-container .thumbnail-container img.thumbnail {
+      z-index: 0;
+      max-height: 50px;
+      border: 2px solid #7a5656; }
+    .news-container .thumbnail-container .img-preview {
+      background-color: #BFBFBF;
+      border: none; }
+    .news-container .thumbnail-container .img-preview.arrow:before {
+      border-color: crimson; }
+    .news-container .thumbnail-container img.img-preview {
+      position: absolute;
+      top: -50px;
+      right: 0;
+      height: 300px;
+      border: 5px solid #BFBFBF;
+      border-radius: 5px; }
+      @media (max-width: 549px) {
+        .news-container .thumbnail-container img.img-preview {
+          height: 90px;
+          top: -40px; } }
+      @media (min-width: 550px) and (max-width: 1000px) {
+        .news-container .thumbnail-container img.img-preview {
+          height: 200px; } }
+  .news-container .msg-body {
+    font-size: small;
+    font-weight: bold; }
+    .news-container .msg-body a {
+      color: #ee495f; }
+    .news-container .msg-body p {
+      margin: 0 0 0 32px; }
+  .news-container .close-x:before {
+    content: 'x'; }
+  .news-container .close-x {
+    text-decoration: none;
+    top: 5px;
+    margin: 0 8px;
     cursor: pointer; }
-  .thumbnail-container img.thumbnail {
-    z-index: 0;
-    max-height: 50px;
-    border: 2px solid #7a5656; }
-  .thumbnail-container .img-preview {
-    background-color: #BFBFBF;
-    border: none; }
-  .thumbnail-container .img-preview.arrow:before {
-    border-color: crimson; }
-  .thumbnail-container img.img-preview {
-    position: absolute;
-    top: -50px;
-    right: 0;
-    height: 300px;
-    border: 5px solid #BFBFBF;
-    border-radius: 5px; }
+  .news-container .display-none {
+    display: none; }
 
 /*# sourceMappingURL=display-news.component.css.map */
